test_regress/t/t_enum_bad_cell.out
%Warning-VARHIDDEN: t/t_enum_bad_cell.v:14:5: Declaration of enum value hides declaration in upper scope: s1
   14 |     s1
      |     ^~
                    t/t_enum_bad_cell.v:8:7: ... Location of original declaration
    8 |   sub s1 ();
      |       ^~
                    ... For warning description see https://verilator.org/warn/VARHIDDEN?v=latest
                    ... Use "/* verilator lint_off VARHIDDEN */" and lint_on around source to disable this message.
%Error: Exiting due to
